Modularize. Bump version to 0.20.0